Fix overlapping panels

--- a/_sass/components/_content-grid.scss
+++ b/_sass/components/_content-grid.scss
@@ -42,6 +42,20 @@
             }
         }
 
+        @media (min-width: 1440px) {
+            aside {
+                top: 10%;
+                width: 30%;
+            }
+        }
+            
+        @media (min-width: 1200px) and (max-width: 1439px) {
+            aside {
+                top: 12%;
+                width: 25%;
+            }
+        }
+
         @media (min-width: 1200px) {
             article {
                 max-width: 65%;
@@ -49,8 +63,7 @@
 
             aside {
                 position: absolute;
-                right: calc(100% - 98%);
-                top: 10%;
+                right: 2%;
             }
         }
     }
